--- a/src/app/gifs/components/search-box/search-box.component.html
+++ b/src/app/gifs/components/search-box/search-box.component.html
@@ -3,6 +3,6 @@
     type="text" 
     class="form-control" 
     placeholder="Buscar gifs..."
-    (keyup.enter)="searchTag(txtTagInput.value)"
+    (keyup.enter)="searchTag()"
     #txtTagInput
     >
