--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -4,12 +4,13 @@
 
     <div 
         class="list-group list-reset"
-        *ngFor="let item of tags"
+        *ngFor="let tag of tags"
         >
         <button 
             class="list-group-item list-group-item-action"
+            (click)="searchTag( tag )"
             >
-            {{ item | titlecase }}
+            {{ tag | titlecase }}
         </button>
     </div>
 </div>
