--- a/src/app/gifs/components/gifs-card/gifs-card.component.html
+++ b/src/app/gifs/components/gifs-card/gifs-card.component.html
@@ -1,14 +1,20 @@
-<div class="card mb-2 text-center bg-dark">
+<div class="card mb-2 text-center bg-dark text-center ">
 
-    <img 
+    <!-- <img 
         [src]="gif.images.downsized_medium.url" 
         [alt]="gif.title"
         class="card-img-top"
+        > -->
+
+    <shared-lazy-image 
+        [url]="gif.images.downsized_medium.url"
+        [alt]="gif.title || 'Sin titulo'"
         >
+    </shared-lazy-image>    
 
     <div class="card-body text-white">
         <p class="card-text">
-            {{ gif.title }}
+            {{ gif.title || 'Sin titulo'}}
         </p>
     </div>
 </div>
